V4126: General Update and fix on P880

--- a/Prevu.Synoptics.V4126_Cotiplast-PET/OverallView.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/OverallView.xaml
@@ -97,7 +97,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="1736" Canvas.Top="2766" Color="Water" Width="2477" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="377-01-MA1"/>
-        <Labels:Pipe Canvas.Left="1636" Canvas.Top="1672" Color="Water" Width="146" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center" StatusComponent="293-01-MA1">
+        <Labels:Pipe Canvas.Left="1637" Canvas.Top="1673" Color="Water" Width="144" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="293-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -136,10 +136,10 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="1569" Canvas.Top="1518" Color="Water" Width="201" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="291-01-MA1"/>
-        <Labels:Pipe Canvas.Left="1574" Canvas.Top="1592" Color="Water" Width="225" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="292-01-MA1"/>
+        <Labels:Pipe Canvas.Left="1557" Canvas.Top="1593" Color="Water" Width="242" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="292-01-MA1"/>
         <Labels:Pipe Canvas.Left="1563" Canvas.Top="1744" Color="Water" Width="148" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="293-01-MA1"/>
         <Labels:Pipe Canvas.Left="5575" Canvas.Top="2366" Color="Water" Width="713" HorizontalAlignment="Center" VerticalAlignment="Center" StatusComponent="457-01-MA1"/>
-        <Labels:Pipe Canvas.Left="6309" Canvas.Top="2366" Color="Water" Width="61" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="457-01-MA1"/>
+        <Labels:Pipe Canvas.Left="6306" Canvas.Top="2366" Color="Water" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="457-01-MA1"/>
         <Labels:Pipe Canvas.Left="5257" Canvas.Top="1257" Color="Water" Width="2222" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="457-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -252,16 +252,16 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <local:P020 CacheMode="BitmapCache" Canvas.Left="53" Canvas.Top="42" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P100 CacheMode="BitmapCache" Canvas.Left="1747" Canvas.Top="98" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P140 CacheMode="BitmapCache" Canvas.Left="2676" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P230 CacheMode="BitmapCache" Canvas.Left="4246" Canvas.Top="213" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P288 CacheMode="BitmapCache" Canvas.Left="169" Canvas.Top="1069" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P330 CacheMode="BitmapCache" Canvas.Left="1847" Canvas.Top="1256" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P350 CacheMode="BitmapCache" Canvas.Left="3014" Canvas.Top="1895" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P430 CacheMode="BitmapCache" Canvas.Left="4710" Canvas.Top="1598" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P530 CacheMode="BitmapCache" Canvas.Left="1094" Canvas.Top="2948" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P810 CacheMode="BitmapCache" Canvas.Left="2663" Canvas.Top="2949" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P880 CacheMode="BitmapCache" Canvas.Left="4222" Canvas.Top="2973" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P020 d:CacheMode="BitmapCache" Canvas.Left="53" Canvas.Top="42" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P100 d:CacheMode="BitmapCache" Canvas.Left="1747" Canvas.Top="98" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P140 d:CacheMode="BitmapCache" Canvas.Left="2676" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P230 d:CacheMode="BitmapCache" Canvas.Left="4246" Canvas.Top="213" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P288 d:CacheMode="BitmapCache" Canvas.Left="169" Canvas.Top="1069" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P330 d:CacheMode="BitmapCache" Canvas.Left="1847" Canvas.Top="1256" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P350 d:CacheMode="BitmapCache" Canvas.Left="3014" Canvas.Top="1895" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P430 d:CacheMode="BitmapCache" Canvas.Left="4710" Canvas.Top="1598" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P530 d:CacheMode="BitmapCache" Canvas.Left="1094" Canvas.Top="2948" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P810 d:CacheMode="BitmapCache" Canvas.Left="2663" Canvas.Top="2949" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P880 d:CacheMode="BitmapCache" Canvas.Left="4222" Canvas.Top="2973" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
