--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P140.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P140.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P140" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="156" StatusComponent="145-01-MA1" Canvas.Left="433" Canvas.Top="608" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="148" StatusComponent="145-01-MA1" Canvas.Left="437" Canvas.Top="612" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -97,7 +97,7 @@
         <Machines:Waste Height="46" Width="44" Canvas.Left="1168" Canvas.Top="502" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Manual_selection Height="77" Width="41" Canvas.Left="492" Canvas.Top="448" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="140-SORT" JumpToLabel="120-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="492" Canvas.Top="92"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="170-01-MA1" JumpToLabel="228-01-MA1" Canvas.Left="1292" Canvas.Top="551"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="170-SORT" JumpToLabel="228-01-MA1" Canvas.Left="1292" Canvas.Top="551"/>
         <Labels:DetailsLabel ComponentName="170-SORT" DetailsPageName="D170" Canvas.Left="1207" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="669" Canvas.Top="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="143-01-MA1" Canvas.Left="291" Canvas.Top="366"/>
