--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P288.xaml
@@ -36,14 +36,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="373" StatusComponent="293-01-MA1" Canvas.Left="960" Canvas.Top="675"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="378" Canvas.Top="649">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="378" Canvas.Top="649">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="457" Canvas.Top="570"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="466" Canvas.Top="520"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="107" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="566"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="341" Canvas.Top="532"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="333" Canvas.Top="433">
@@ -53,14 +53,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="283" Canvas.Top="303">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="281" Canvas.Top="303">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="27" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="553" Canvas.Top="581">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="ByProduct" Width="27" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="562" Canvas.Top="531">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -68,23 +68,23 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1147" Canvas.Top="266"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="274" Canvas.Top="517">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="296" Canvas.Top="544">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+                    <ScaleTransform ScaleX="-1"/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="274" Canvas.Top="482">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="296" Canvas.Top="508">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+                    <ScaleTransform ScaleX="-1"/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1149" Canvas.Top="656"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="545" Canvas.Top="574"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="287" Canvas.Top="313"/>
+        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="554" Canvas.Top="524"/>
+        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="285" Canvas.Top="313"/>
         <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1149" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1149" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="412" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -107,13 +107,10 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="293-01-MA1" Canvas.Left="1127" Canvas.Top="706"/>
         <Labels:DeviceLabel ComponentName="292-01-MA1" Canvas.Left="1127" Canvas.Top="555" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="291-01-MA1" Canvas.Left="1127" Canvas.Top="373" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-41-LT1" Canvas.Left="411" Canvas.Top="544"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="206" Canvas.Top="558"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-01-MA1" Canvas.Left="525" Canvas.Top="473"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="206" Canvas.Top="490"/>
-        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="303" Canvas.Top="439" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-01-MA1" Canvas.Left="903" Canvas.Top="430"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-41-LT1" Canvas.Left="904" Canvas.Top="498"/>
         <Labels:DeviceLabel ComponentName="285-01-MA1" Canvas.Left="305" Canvas.Top="705" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="516" Canvas.Top="553" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="412" Canvas.Top="553"/>
     </Canvas>
 </UserControl>
