--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P330.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P330.xaml
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="678" Canvas.Top="284" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="164" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="678" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="553" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="837" Canvas.Top="712" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="107" StatusComponent="298-01-MA1" PipeHeight="Medium"  Canvas.Left="118" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="71" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="488" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top" />
@@ -74,7 +74,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="80" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1238" Canvas.Top="588" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="866" Canvas.Top="284" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="286" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="863" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="71" StatusComponent="320-01-MA1" PipeHeight="Medium"  Canvas.Left="326" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Machines:V01_SLX_MixingSiloScrew Canvas.Left="124" Canvas.Top="262" Height="305" Width="217" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="320-41-LT1" TrendName="LEVEL" Color="WetMaterial" />
         <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="52" Canvas.Left="272" Canvas.Top="249"/>
