--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P350.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P350.xaml
@@ -35,7 +35,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Vapor" Width="36" RenderTransformOrigin="0.5,0.5" StatusComponent="380-22-CV1" VisibilityComponent="" Canvas.Left="1259" Canvas.Top="375" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="213" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1071" Canvas.Top="455" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="211" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1073" Canvas.Top="455" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Vapor" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="380-22-CV1" VisibilityComponent="" Canvas.Left="1255" Canvas.Top="411" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -50,7 +50,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="231" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="960" Canvas.Top="343" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="231" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="962" Canvas.Top="343" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -171,7 +171,7 @@
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="354" Canvas.Top="401" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="354" Canvas.Top="467" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="380-01-MA1" JumpToLabel="420-01-MA1" Canvas.Left="1433" Canvas.Top="424" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-MIXER" Canvas.Left="186" Canvas.Top="34"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-WASHING" Canvas.Left="186" Canvas.Top="34"/>
         <Labels:JumpLabel JumpFromLabel="373-01-MA1" JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="55" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="377-01-MA1" JumpToLabel="100-01-MA1" Canvas.Left="1001" Canvas.Top="728" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="380-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="1259" Canvas.Top="510" HorizontalAlignment="Left" VerticalAlignment="Center"/>
