--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P430.xaml
@@ -9,9 +9,9 @@
              x:Class="Prevu.Synoptics.P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="47" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1092" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="47" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1091" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="96" StatusComponent="442-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="900" Canvas.Top="521" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="137" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1153" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="138" StatusComponent="443-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1152" Canvas.Top="407" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="90" StatusComponent="446-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1332" Canvas.Top="450" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -33,7 +33,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="424" Canvas.Top="400" StatusComponent="455-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="933" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="424" Canvas.Top="400" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="933" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -54,8 +54,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="141" Color="Water" StatusComponent="440-01-MA1" VisibilityComponent="" Canvas.Left="604" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="296" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" VisibilityComponent="" Canvas.Left="458" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="141" Color="Water" StatusComponent="430-01-MA3" VisibilityComponent="" Canvas.Left="604" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="296" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA3" VisibilityComponent="" Canvas.Left="458" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -118,14 +118,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="444-01-MA1" Canvas.Left="579" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="433-01-MA1" Canvas.Left="579" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="482" Color="Water" StatusComponent="444-01-MA1" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="482" Color="Water" StatusComponent="433-01-MA1" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:WaterPump Width="44" VerticalAlignment="Center" Canvas.Top="319" RenderTransformOrigin="0.5,0.5" Canvas.Left="610" Height="45" HorizontalAlignment="Left"/>
         <Machines:STR_Washing_reactor_B Height="162" Width="155" Canvas.Left="163" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="397" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top">
