--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P100" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Water" Width="140" StatusComponent="120-21-CV1" Canvas.Left="1109" Canvas.Top="414" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="81" StatusComponent="120-21-CV1" Canvas.Left="1109" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="102" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" Canvas.Left="542" Canvas.Top="157" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -78,7 +78,7 @@
         <Labels:Pipe Width="281" StatusComponent="098-01-MA1" PipeHeight="Medium" Canvas.Left="314" Canvas.Top="185" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="334" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="36" Canvas.Top="711"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="202" Color="Water" StatusComponent="110-23-CV1" Canvas.Left="627" Canvas.Top="789"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="99" StatusComponent="104-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="605" Canvas.Top="363"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="94" StatusComponent="104-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="610" Canvas.Top="363"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="98" Color="Water" StatusComponent="100-01-MA1" Canvas.Left="746" Canvas.Top="379"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="100-01-MA1" Canvas.Left="663" Canvas.Top="319">
             <Labels:Pipe.RenderTransform>
@@ -102,7 +102,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="93" StatusComponent="110-21-CV1" Canvas.Left="266" Canvas.Top="534"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="56" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="471" Canvas.Top="395">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="56" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="481" Canvas.Top="425">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -148,8 +148,15 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:Pipe Width="30" StatusComponent="104-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="597" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Rectangle HorizontalAlignment="Left" Height="110" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="827" Canvas.Top="722" RenderTransformOrigin="0.5,0.5"/>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="221" Canvas.Top="692">
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="221" Canvas.Top="691">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -180,12 +187,12 @@
             </Machines:V01_CV_Valve_wColor.RenderTransform>
         </Machines:V01_CV_Valve_wColor>
         <Machines:V01_VB_VibratingScreen Canvas.Left="657" Canvas.Top="353" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="477" Canvas.Top="401" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="487" Canvas.Top="431" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VRR_WetTrommel Canvas.Left="555" Canvas.Top="173" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SAD14_FlatDiskSeparator Canvas.Left="1138" Canvas.Top="324" Height="109" Width="251" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1234" Canvas.Top="460" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="825" Canvas.Top="365" Width="144" Height="134" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="487" Canvas.Top="355" HorizontalAlignment="Left" VerticalAlignment="Center" Width="125"/>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="497" Canvas.Top="385" HorizontalAlignment="Center" VerticalAlignment="Top" Width="125"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="929" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_CV_Valve_wColor Canvas.Left="1066" Canvas.Top="403" Height="28" Width="56" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Machines:V01_CV_Valve_wColor.RenderTransform>
@@ -196,7 +203,7 @@
         </Machines:V01_CV_Valve_wColor>
         <Machines:V01_CV_Valve Canvas.Left="580" Canvas.Top="777" Height="30" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="128" Canvas.Top="717" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="121" Canvas.Top="704" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="121" Canvas.Top="705" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="231" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="231" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="120-VALVE" DetailsPageName="D120" HideComponentName="True" Canvas.Left="1400" Canvas.Top="269" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -209,7 +216,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="117-01-MA1" Canvas.Left="832" Canvas.Top="607"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="110-71-ECS2" Canvas.Left="687" Canvas.Top="722"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="100-01-MA1" Canvas.Left="775" Canvas.Top="149"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="106-01-MA1" Canvas.Left="442" Canvas.Top="299"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="106-01-MA1" Canvas.Left="452" Canvas.Top="329"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="120-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1188" Canvas.Top="269"/>
         <Labels:DeviceLabel ComponentName="110-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="333" Canvas.Top="668" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="110-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="439" Canvas.Top="668" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -219,7 +226,7 @@
         <Labels:DeviceLabel ComponentName="110-23-CV1" Canvas.Left="560" Canvas.Top="722" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="113-43-CT1" Canvas.Left="84" Canvas.Top="744" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="100-01-MA1" JumpToLabel="098-01-MA1" Canvas.Left="250" Canvas.Top="155"/>
-        <Labels:JumpLabel JumpFromLabel="120-01-MA1" JumpToLabel="141-01-MA1" Canvas.Left="1420" Canvas.Top="321" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="120-01-MA1" JumpToLabel="140-SORT" Canvas.Left="1420" Canvas.Top="321" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="100-01-MA1" JumpToLabel="457-01-MA1" Canvas.Left="745" Canvas.Top="16" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="100-01-MA1" JumpToLabel="293-01-MA1" Canvas.Left="481" Canvas.Top="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="100-01-MA1" JumpToLabel="377-01-MA1" Canvas.Left="361" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
