--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P230.xaml
@@ -98,15 +98,15 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="130" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="121" Canvas.Top="76"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="465" Canvas.Top="578">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="102" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="121" Canvas.Top="76" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="468" Canvas.Top="578">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="496" Canvas.Top="611"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="499" Canvas.Top="611"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="182" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" Canvas.Left="315" Canvas.Top="644">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -117,7 +117,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="242" StatusComponent="292-01-MA1" Canvas.Left="133" Canvas.Top="459"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" VerticalAlignment="Center" Width="152" Canvas.Left="198" Canvas.Top="71" />
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="647" Canvas.Top="586" Height="60" Width="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_MU_Grinder Canvas.Left="277" Canvas.Top="226" Height="161" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_MU_Grinder Canvas.Left="277" Canvas.Top="226" Height="161" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" Color="WetMaterial" ComponentName="230-01-MA1" TrendName="CURRENT.AMP_INTEGRATION"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="363" Canvas.Top="436" Height="152" Width="156" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="361" Canvas.Top="697" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="385" Canvas.Top="712" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -149,7 +149,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="232-01-MA1" Canvas.Left="522" Canvas.Top="446"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-02-MA1" Canvas.Left="457" Canvas.Top="338"/>
         <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="254" Canvas.Top="710" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="61" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-SORT" Canvas.Left="61" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="61" Canvas.Top="427" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="516" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="230-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="61" Canvas.Top="302" HorizontalAlignment="Left" VerticalAlignment="Center"/>
