--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Pages/P100.xaml
@@ -206,11 +206,10 @@
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="121" Canvas.Top="705" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="231" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="231" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="120-VALVE" DetailsPageName="D120" HideComponentName="True" Canvas.Left="1400" Canvas.Top="269" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="120-VALVE" DetailsPageName="D120" Canvas.Left="1294" Canvas.Top="269" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="115-01-MA1" Canvas.Left="929" Canvas.Top="311" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="127-21-CV1" Canvas.Left="125" Canvas.Top="381" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="129-21-CV1" Canvas.Left="125" Canvas.Top="445" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="120-VALVE" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1302" Canvas.Top="269" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="104-01-MA1" Canvas.Left="662" Canvas.Top="417"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="113-01-MA1" Canvas.Left="199" Canvas.Top="744"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="117-01-MA1" Canvas.Left="832" Canvas.Top="607"/>
