--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P230.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P230.xaml
@@ -205,8 +205,8 @@
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="454" Canvas.Left="184" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_GrinderDiverter Canvas.Left="683" Canvas.Top="171" Height="103" Width="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_MU_Grinder Canvas.Left="179" Canvas.Top="359" Height="161" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_MU_Grinder Canvas.Left="948" Canvas.Top="360" Height="160" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_MU_Grinder Canvas.Left="179" Canvas.Top="359" Height="161" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" Color="WetMaterial" ComponentName="230-01-MA1" TrendName="CURRENT.AMP_INTEGRATION"/>
+        <Machines:V01_MU_Grinder Canvas.Left="948" Canvas.Top="360" Height="160" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="CURRENT.AMP_INTEGRATION" ComponentName="240-01-MA1" Color="WetMaterial"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="265" Canvas.Top="549" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1034" Canvas.Top="549" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Height="66" Width="93" Canvas.Left="262" Canvas.Top="756" HorizontalAlignment="Center" VerticalAlignment="Top"/>
