--- a/Prevu.Synoptics.V6120_Novatex/Pages/P230.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P230.xaml
@@ -177,8 +177,8 @@
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="454" Canvas.Left="184" Canvas.Top="268" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_DV_GrinderDiverter Canvas.Left="683" Canvas.Top="144" Height="103" Width="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_MU_Grinder Canvas.Left="179" Canvas.Top="332" Height="161" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_MU_Grinder Canvas.Left="948" Canvas.Top="333" Height="160" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_MU_Grinder Canvas.Left="179" Canvas.Top="332" Height="161" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top" Color="WetMaterial" ComponentName="230-01-MA1" TrendName="CURRENT.AMP_INTEGRATION"/>
+        <Machines:V01_MU_Grinder Canvas.Left="948" Canvas.Top="333" Height="160" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top" TrendName="CURRENT.AMP_INTEGRATION" Color="WetMaterial" ComponentName="240-01-MA1"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="265" Canvas.Top="522" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1034" Canvas.Top="522" Height="152" Width="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:VRC_WaterCollectingTank Height="66" Width="93" Canvas.Left="262" Canvas.Top="764" HorizontalAlignment="Center" VerticalAlignment="Top"/>
