V6120: Fix during simulation

--- a/Prevu.Synoptics.V6120_Novatex/Details/D318.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Details/D318.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="386" MinWidth="380">
         <Machines:V01_SCW_Screw_wHopper Height="366" Width="360" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="10" Canvas.Left="10"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="318-46-WT1" SignalName="LSH" Canvas.Left="23" Canvas.Top="156" />
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="318-46-WT1" SignalName="LSHA" Canvas.Left="23" Canvas.Top="156" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="318-46-WT1" Canvas.Left="60" Canvas.Top="80"/>
     </Canvas>
 </UserControl>
