--- a/Prevu.Synoptics.V6120_Novatex/Details/D553.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Details/D553.xaml
@@ -10,9 +10,9 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="326" Width="283">
         <Machines:V01_Hopper Canvas.Left="13" Canvas.Top="13" Height="300" Width="260" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="553-41-LEV" SignalName="LSHA" Canvas.Left="147" Canvas.Top="33" />
-        <Labels:SignalLabel ComponentName="553-41-LEV" SignalName="LSH" Canvas.Left="147" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:SignalLabel ComponentName="553-41-LEV" SignalName="LSLA" Canvas.Left="147" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center" IsEnabled="False" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="553-41-LEV" Canvas.Left="28" Canvas.Top="112"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="553-41-LEV" SignalName="LSHA" Canvas.Left="37" Canvas.Top="33" />
+        <Labels:SignalLabel ComponentName="553-41-LEV" SignalName="LSH" Canvas.Left="37" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:SignalLabel ComponentName="553-41-LEV" SignalName="LSL" Canvas.Left="67" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center" IsEnabled="False" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="553-41-LEV" Canvas.Left="96" Canvas.Top="151"/>
     </Canvas>
 </UserControl>
