--- a/Prevu.Synoptics.V6120_Novatex/Pages/P950.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P950.xaml
@@ -157,6 +157,6 @@
         <Labels:DeviceLabel ComponentName="980-SILO" Canvas.Left="1173" Canvas.Top="395" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="950-ANALYSIS" Canvas.Left="70" Canvas.Top="432" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="948-31-CV1" JumpToLabel="908-01-MA1" Canvas.Left="13" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:JumpLabel JumpFromLabel="978-01-MA1" JumpToLabel="991-01-MA1" Canvas.Left="1439" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:JumpLabel JumpFromLabel="978-01-MA1" JumpToLabel="991-31-CV1" Canvas.Left="1439" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top" />
     </Canvas>
 </UserControl>
