--- a/Prevu.Synoptics.V6120_Novatex/Pages/P330.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P330.xaml
@@ -74,14 +74,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-31-CV1" Canvas.Left="1059" Canvas.Top="539" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1059" Canvas.Top="539" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="335-31-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="340-31-CV1" Canvas.Left="1267" Canvas.Top="536" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1267" Canvas.Top="536" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="340-31-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -149,7 +149,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="330-31-CV1" Canvas.Left="838" Canvas.Top="543" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="838" Canvas.Top="543" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="330-31-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
